--- a/unsub_test.html
+++ b/unsub_test.html
@@ -49,7 +49,7 @@
 
     </style>
     ​<script type="text/javascript">
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[],region:'us1', notifications:[]};
      clevertap.account.push({"id": "WR5-ZZ6-796Z"});
      (function () {
     		 var wzrk = document.createElement('script');
