--- a/unsub_test.html
+++ b/unsub_test.html
@@ -113,6 +113,7 @@
         // call this function to unsubscribe the user
         function unsubscribe(isReEncode) {
             $WZRK_WR.unSubEmail(isReEncode);
+             alert("Unsubscribe method called");
             // Enviar o motivo, mas tem que puxar o profile antes que não está funcionando.
             // var motive = Array.from(form.elements.OPT_OUT_WINE_MOTIVO).find(radio => radio.checked);
             // clevertap.profile.push({
