--- a/unsub_test.html
+++ b/unsub_test.html
@@ -49,8 +49,8 @@
 
     </style>
     ​<script type="text/javascript">
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[],region:'us1', notifications:[]};
-     clevertap.account.push({"id": "WR5-ZZ6-796Z"});
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+     clevertap.account.push({"id": "4RR-6Z7-Z76Z"});
      (function () {
     		 var wzrk = document.createElement('script');
     		 wzrk.type = 'text/javascript';
