--- a/unsub_test.html
+++ b/unsub_test.html
@@ -72,7 +72,8 @@
         <div>
             <input type="hidden" id="email" readonly="readonly" />
             <br />
-            <button onclick="unsubscribe()">Click here to unsubscribe</button>
+            <button onclick="unsubscribe()">Click here to unsubscribe</button><br>
+            <button onclick="resubscribe()">Click here to Re-subscribe</button>
         </div>
     </div>
 
