--- a/unsub_test.html
+++ b/unsub_test.html
@@ -111,7 +111,7 @@ function generateRandomId() {
             console.log(emailInput);
             clevertap.onUserLogin.push({
              "Site": {        
-               "Email": "emailInput",         
+               "Email": emailInput,         
                "MSG-email": true,              
                      }
                 });     
