--- a/unsub_test.html
+++ b/unsub_test.html
@@ -116,6 +116,7 @@ function generateRandomId() {
                      }
                 });     
             alert('Email submitted: ' + emailInput);
+            clevertap.event.push("Email Submit");
         }
     </script>
             <br>
