--- a/unsub_test.html
+++ b/unsub_test.html
@@ -139,13 +139,14 @@ function generateRandomId() {
         
         // on  page load, fetch the email id of the user.
         window.onload = function () {
-            $WZRK_WR.getEmail(isReEncode);
+       var emailOnLoadpage= $WZRK_WR.getEmail(isReEncode);
+            console.log(emailOnLoadpage);
 
         };
         // will be called after the email id of the user has been fetched
         function wzrk_email_fetched(emailStr) {
-            console.log(emailStr);
             document.getElementById('email').value = emailStr;
+              console.log("email from Server: "+emailStr);
         }
 
         // will be called after the subscription preferences for the user have been updated
@@ -156,7 +157,7 @@ function generateRandomId() {
             if (status == 0) {
                 statusLabel = 'Successfully unsubscribed';
             }
-            alert("Você foi " + statusLabel);
+            console.log("status level" + statusLabel);
         }
 
         // call this function to unsubscribe the user
